// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`outline renders 0 1`] = `
Array [
  .c0 {
  outline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  outline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  outline: 0;
}

<div
    className="c0"
  />,
  .c0 {
  outline: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`outline renders function 1`] = `
Array [
  .c0 {
  outline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  outline: has;
}

<div
    className="c0"
  />,
  .c0 {
  outline: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  outline: has;
}

<div
    className="c0"
  />,
]
`;

exports[`outline renders invalid theme path 1`] = `
Array [
  .c0 {
  outline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  outline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  outline: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  outline: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`outline renders negative number 1`] = `
Array [
  .c0 {
  outline: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  outline: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  outline: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  outline: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`outline renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    outline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    outline: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    outline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    outline: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`outline renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    outline: July;
  }
}

@media April {
  .c0 {
    outline: August;
  }
}

@media January {
  .c0 {
    outline: September;
  }
}

@media April {
  .c0 {
    outline: November;
  }
}

@media June {
  .c0 {
    outline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    outline: July;
  }
}

@media April {
  .c0 {
    outline: August;
  }
}

@media January {
  .c0 {
    outline: September;
  }
}

@media April {
  .c0 {
    outline: November;
  }
}

@media June {
  .c0 {
    outline: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    outline: January;
  }
}

@media April {
  .c0 {
    outline: December;
  }
}

@media January {
  .c0 {
    outline: April;
  }
}

@media April {
  .c0 {
    outline: May;
  }
}

@media June {
  .c0 {
    outline: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    outline: January;
  }
}

@media April {
  .c0 {
    outline: December;
  }
}

@media January {
  .c0 {
    outline: April;
  }
}

@media April {
  .c0 {
    outline: May;
  }
}

@media June {
  .c0 {
    outline: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`outline renders postitive number 1`] = `
Array [
  .c0 {
  outline: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  outline: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  outline: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  outline: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`outline renders string 1`] = `
Array [
  .c0 {
  outline: July;
}

<div
    className="c0"
  />,
  .c0 {
  outline: July;
}

<div
    className="c0"
  />,
  .c0 {
  outline: June;
}

<div
    className="c0"
  />,
  .c0 {
  outline: June;
}

<div
    className="c0"
  />,
]
`;

exports[`outline renders valid theme path 1`] = `
Array [
  .c0 {
  outline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  outline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  outline: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  outline: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
